syntax = "proto2";

package models;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "actions.proto";
import "environment_variables.proto";
import "security_group.proto";

option (gogoproto.goproto_enum_prefix_all) = true;

message Tasks {
  repeated Task tasks = 1;
}

message TaskDefinition {
  optional string root_fs = 1 [(gogoproto.jsontag) = "rootfs"];
  repeated EnvironmentVariable environment_variables = 2 [(gogoproto.jsontag) = "env,omitempty"];
  optional Action action = 3;
  optional int32 disk_mb = 4;
  optional int32 memory_mb = 5;
  optional uint32 cpu_weight = 6;
  optional bool privileged = 7;
  optional string log_source = 8;
  optional string log_guid = 9;
  optional string metrics_guid = 10;
  optional string result_file = 11;
  optional string completion_callback_url = 12 [(gogoproto.jsontag) = "completion_callback_url,omitempty"];
  optional string annotation = 13 [(gogoproto.jsontag) = "annotation,omitempty"];
  repeated SecurityGroupRule egress_rules = 14 [(gogoproto.jsontag) = "egress_rules,omitempty"];
}

message Task {
  enum State {
    Invalid = 0;
    Pending = 1;
    Running = 2;
    Completed = 3;
    Resolving = 4;
  }

  optional TaskDefinition task_definition = 1 [(gogoproto.jsontag) = "", (gogoproto.embed) = true];

  optional string task_guid = 2;
  optional string domain = 3;
  optional int64 created_at = 4;
  optional int64 updated_at = 5;
  optional int64 first_completed_at = 6;

  optional State state = 7;

  optional string cell_id = 8;

  optional string result = 9;
  optional bool failed = 10;
  optional string failure_reason = 11;
}

message DesireTaskRequest {
  optional TaskDefinition task_definition = 1 [(gogoproto.jsontag) = "task_definition"];
  optional string task_guid = 2;
  optional string domain = 3;
}

message StartTaskRequest {
  optional string task_guid = 1;
  optional string cell_id = 2;
}

message StartTaskResponse {
  optional bool should_start = 1;
}

message FailTaskRequest {
  optional string task_guid = 1;
  optional string failure_reason = 2;
}

message TaskGuidRequest {
  optional string task_guid = 1;
}

message CompleteTaskRequest {
  optional string task_guid = 1;
  optional string cell_id = 2;
  optional bool failed = 3;
  optional string failure_reason = 4;
  optional string result = 5;
}

message TaskCallbackResponse {
  optional string task_guid = 1;
  optional bool failed = 2;
  optional string failure_reason = 3;
  optional string result = 4;
  optional string annotation = 5 [(gogoproto.jsontag) = "annotation,omitempty"];
}
